// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React tree for provided and consumed components Should correctly update subscribed to functional provider elements view: Initial state. 1`] = `
<DS.Observer>
  <Component>
    {"first":"first","second":2,"third":false}
  </Component>
</DS.Observer>
`;

exports[`React tree for provided and consumed components Should correctly update subscribed to functional provider elements view: Updated state. 1`] = `
<DS.Observer>
  <Component>
    {"first":"updated","second":101010,"third":true}
  </Component>
</DS.Observer>
`;
